--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,20 +1,20 @@
 # The name of our workflow
 name: Build
-on: [push, pull_request]
+on: [push, pull_request, workflow_dispatch]
 
 jobs:
   build:
     strategy:
       fail-fast: false
       matrix:
-          target: [Ui, Skeleton]
+          target: [Skeleton]
     name: "Release ${{ matrix.target }}"
     runs-on: ubuntu-latest
     steps:
       - name: Use debug signing
         run: mkdir -p ~/.gradle && echo -e "icsopenvpnDebugSign=true\norg.gradle.jvmargs=-Xmx2048M" > ~/.gradle/gradle.properties
       - name: Checkout the code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
           submodules: true
       - name: copy tunnelblick patches
@@ -25,10 +25,8 @@ jobs:
         run: find . -name "*.diff" -type f -delete
       - name: Build the app
         run: ./gradlew assemble${{ matrix.target }}Release
-      - name: Run Unit tests
-        run: ./gradlew test${{ matrix.target }}ReleaseUnitTest
       - name: Upload artifact - dump outputs folder
-        uses: actions/upload-artifact@v1.0.0
+        uses: actions/upload-artifact@v4.0.0
         with:
           name: gradle outputs folder
           path: /home/runner/work/ics-openvpn-xor/ics-openvpn-xor/main/build/outputs
